chore: use `min-width: 0` instead of `overflow: hidden` to prevent long lines from overflowing

--- a/src/components/JSONEditor.scss
+++ b/src/components/JSONEditor.scss
@@ -4,12 +4,12 @@
 .jsoneditor-main {
   width: 100%;
   height: 100%;
+  min-width: 0;
   min-height: 150px;
   border: 1px solid $theme-color;
   position: relative;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
 
   &.focus {
     box-shadow: $outline-shadow;
