--- a/src/components/modes/treemode/TreeMode.scss
+++ b/src/components/modes/treemode/TreeMode.scss
@@ -6,7 +6,8 @@
   flex-direction: column;
   position: relative;
   background: $white;
-  overflow: hidden;
+  min-width: 0;
+  min-height: 0;
 
   &:not(.visible) {
     visibility: hidden;
